--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-    "dependencies": {
-        "@project-serum/anchor": "^0.20.1"
-    },
-    "devDependencies": {
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3"
-    }
+  "dependencies": {
+    "@project-serum/anchor": "^0.20.1",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/web3.js": "^1.33.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3"
+  }
 }
