--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ target
 **/*.rs.bk
 node_modules
 yarn.lock
+
+# Editor directories and files
+.project
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
