--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.20.1",
@@ -17,8 +19,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.1.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.4.1",
+    "prettier": "^2.5.1",
     "unplugin-auto-import": "^0.5.11",
     "unplugin-vue-components": "^0.17.17",
-    "vite": "^2.7.13"
+    "vite": "^2.7.13",
+    "vite-plugin-eslint": "^1.3.0"
   }
 }
