--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-vue": "^8.4.1",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
+    "sass": "^1.49.7",
     "tailwindcss": "^3.0.18",
     "unplugin-auto-import": "^0.5.11",
     "unplugin-vue-components": "^0.17.17",
