--- a/app/package.json
+++ b/app/package.json
@@ -21,17 +21,13 @@
     "@vitejs/plugin-vue": "^2.1.0",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.4.1",
+    "vite-plugin-eslint": "^1.3.0",
     "postcss": "^8.4.6",
-    "prettier": "^2.5.1",
     "sass": "^1.49.7",
     "tailwindcss": "^3.0.18",
     "unplugin-auto-import": "^0.5.11",
     "unplugin-vue-components": "^0.17.17",
-    "vite": "^2.7.13",
-    "vite-plugin-eslint": "^1.3.0"
+    "vite": "^2.7.13"
   }
 }
