--- a/Anchor.toml
+++ b/Anchor.toml
@@ -9,7 +9,7 @@ url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/home/wtxpwh/.config/solana/id.json"
+wallet = "/home/thinkwsl/.config/solana/id.json"
 
 [scripts]
 test = "yarn run mocha -t 1000000 tests/"
