--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "dependencies": {
-        "@project-serum/anchor": "^0.20.1"
+        "@project-serum/anchor": "^0.20.1",
+        "@project-serum/common": "^0.0.1-beta.3",
+        "tweetnacl": "^1.0.3",
+        "tweetnacl-util": "^0.15.1"
     },
     "devDependencies": {
         "chai": "^4.3.4",
