--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "name": "spl-token-timelock",
+    "version": "0.1.0",
+    "license": "GPL-3.0",
     "dependencies": {
         "@project-serum/anchor": "^0.20.1",
         "@project-serum/common": "^0.0.1-beta.3",
