--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@project-serum/anchor": "^0.20.1",
     "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.33.0",
+    "@solana/wallet-adapter-base": "^0.9.3",
+    "@solana/wallet-adapter-wallets": "^0.15.4",
+    "@solana/web3.js": "^1.34.0",
     "element-plus": "^2.0.0",
+    "solana-wallets-vue": "^0.3.1",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
@@ -22,12 +25,12 @@
     "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
     "eslint-plugin-vue": "^8.4.1",
-    "vite-plugin-eslint": "^1.3.0",
     "postcss": "^8.4.6",
     "sass": "^1.49.7",
     "tailwindcss": "^3.0.18",
     "unplugin-auto-import": "^0.5.11",
     "unplugin-vue-components": "^0.17.17",
-    "vite": "^2.7.13"
+    "vite": "^2.7.13",
+    "vite-plugin-eslint": "^1.3.0"
   }
 }
