--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,9 @@
     "@solana/web3.js": "^1.34.0",
     "element-plus": "^2.0.2",
     "solana-wallets-vue": "^0.3.1",
+    "store": "^2.0.12",
     "vue": "^3.2.29",
+    "vue-i18n": "^9.2.0-beta.30",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
