--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.7",
     "@project-serum/anchor": "^0.20.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.9.3",
