--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@solana/wallet-adapter-base": "^0.9.3",
     "@solana/wallet-adapter-wallets": "^0.15.4",
     "@solana/web3.js": "^1.34.0",
+    "dayjs": "^1.10.7",
     "element-plus": "^2.0.2",
     "solana-wallets-vue": "^0.3.1",
     "store": "^2.0.12",
